[gd_scene format=3 uid="uid://bn0xhuc4th847"]

[ext_resource type="Script" uid="uid://c1ymvqj477lag" path="res://scenes/character/player.gd" id="1_tum32"]
[ext_resource type="PackedScene" uid="uid://b48hx24kxhkc0" path="res://scenes/character/character_render.tscn" id="3_0vjlc"]

[sub_resource type="ViewportTexture" id="ViewportTexture_tum32"]
viewport_path = NodePath("CharaterSubviewport")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tum32"]
height = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_tum32"]

[node name="Player" type="CharacterBody3D" unique_id=572186867 node_paths=PackedStringArray("character_render")]
collision_mask = 7
script = ExtResource("1_tum32")
character_render = NodePath("CharaterSubviewport/CharacterRender")

[node name="PlayerSprite" type="Sprite3D" parent="." unique_id=647809251]
transform = Transform3D(1, 0, 0, 0, 0.34202015, 0.9396926, 0, -0.9396926, 0.34202015, 0, 0.3523516, 0)
shaded = true
alpha_cut = 2
texture = SubResource("ViewportTexture_tum32")

[node name="Playercollision" type="CollisionShape3D" parent="." unique_id=1817848545]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_tum32")

[node name="Camera3D" type="Camera3D" parent="." unique_id=1030898202]
transform = Transform3D(1, 0, 0, 0, 0.34202015, 0.9396926, 0, -0.9396926, 0.34202015, 0, 3.8302813, 1.2961574)

[node name="CharaterSubviewport" type="SubViewport" parent="." unique_id=1327488289]
transparent_bg = true
size = Vector2i(200, 200)

[node name="CharacterRender" parent="CharaterSubviewport" unique_id=1285145215 instance=ExtResource("3_0vjlc")]
position = Vector2(100, 100)

[node name="MeleeHitbox" type="Area3D" parent="." unique_id=1858469687]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0

[node name="AttackCollision" type="CollisionShape3D" parent="MeleeHitbox" unique_id=1710309367]
transform = Transform3D(1.9106855e-15, 4.371139e-08, 1, 1, -4.371139e-08, 0, 4.371139e-08, 1, -4.371139e-08, 0.6, 0, 0)
shape = SubResource("SphereShape3D_tum32")

[connection signal="swipe" from="CharaterSubviewport/CharacterRender" to="." method="_on_character_render_swipe"]
